syntax = "proto3";
import "google/protobuf/empty.proto";

service MasterReplicaService {
    rpc Lock (LockRequest) returns (LockReply);
    rpc Write (WriteRequest) returns (google.protobuf.Empty);
    rpc HeartBeat (HeartBeatRequest) returns (google.protobuf.Empty);
    rpc Crash (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc ReadRecovery (ReadRecoveryRequest) returns (ReadRecoveryReply);
}

message ObjectIdentifierDto {
    string partition_id = 1;
    string object_id = 2;
}

message ObjectDto {
    ObjectIdentifierDto object_identifier = 1;
    string value = 2;
}

message LockRequest {
    ObjectIdentifierDto object_identifier = 1;
}

message LockReply {
    int32 lock_id = 1;
}

message WriteRequest {
    int32 lock_id = 1;
    ObjectDto object = 2;
}

message HeartBeatRequest {
    string server_id = 1;
}

message ReadRecoveryRequest {
    ObjectIdentifierDto object_identifier = 1;
}

message ReadRecoveryReply {
    bool valid = 1; // If valid is false it means that server has that object locked and doesn't know the most recent value
    ObjectDto object = 2;
}
